Interfaz generica para menor acoplamiento